--- a/src/components/Home/TrendingSales/_trendingsales.scss
+++ b/src/components/Home/TrendingSales/_trendingsales.scss
@@ -1,23 +1,117 @@
-.trending-sales-wrapper{
-    background: rgba(35, 36, 78, 0.50);
-    backdrop-filter: blur(10px);
-    .trending-tab{
-        cursor: pointer;
-        border-radius: 13px;
-        h6{
-            color: #FFF;
-text-align: center;
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-text-transform: capitalize;
-        }
+.trending-sales-wrapper {
+  background: rgba(35, 36, 78, 0.5);
+  backdrop-filter: blur(10px);
+  .trending-tab {
+    cursor: pointer;
+    border-radius: 13px;
+    h6 {
+      color: #fff;
+      text-align: center;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      text-transform: capitalize;
     }
+  }
 
-    .trending-tab-active{
-        border-radius: 12px;
-border: 1px solid #2F80ED;
-background: #2F80ED;
+  .trending-tab-active {
+    border-radius: 12px;
+    background: #2f80ed;
+  }
+
+  .trending-divider {
+    background: #828fbb;
+    height: 4px;
+    width: 100%;
+  }
+
+  .trending-cards-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 35px;
+
+    .trending-card {
+      border-radius: 10px;
+      background: #23244e;
+      .trending-card-title {
+        color: #fff;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: 1.25px;
+        text-transform: capitalize;
+      }
+
+      .trending-card-cfx-price {
+        color: #fff;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        letter-spacing: 1px;
+        text-transform: capitalize;
+      }
+
+      .trending-card-usd-price {
+        color: #3dbda7;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+        letter-spacing: 0.5px;
+        text-transform: capitalize;
+      }
+
+      .trending-tag {
+        border-radius: 0px 10px;
+        border: 1px solid #2f80ed;
+        background: rgba(47, 128, 237, 0.05);
+        display: flex;
+        width: 30px;
+        height: 30px;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        right: 0;
+        top: 0;
+        span {
+          color: #fff;
+          text-align: center;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+          text-transform: capitalize;
+        }
+      }
+
+      .sale-tag {
+        position: absolute;
+        bottom: 5%;
+        right: 3%;
+        span {
+          color: #fff;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: normal;
+          letter-spacing: 0.8px;
+          text-transform: capitalize;
+        }
+      }
+
+      .list-date{
+        color: #B6A6B5;
+font-size: 13px;
+font-style: normal;
+font-weight: 400;
+line-height: 12px; 
+position: absolute;
+left: 0%;
+bottom: -15%;
+      }
     }
+  }
 }
