--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -24,6 +24,11 @@
     line-height: normal;
   }
 
+  .blue-btn:active{
+    background: #2f80ed !important;
+
+  }
+
   .search-input{
     width: 80%;
     background: #141843;
