--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-*{
-    font-family: 'Poppins', sans-serif !important;
+* {
+  font-family: "Poppins", sans-serif !important;
 }
 
-input:focus{
-    outline: none;
+input:focus {
+  outline: none;
 }
 
 .main-hero-title {
@@ -23,7 +23,25 @@ input:focus{
   -webkit-text-fill-color: transparent;
 }
 
+.trending-tab {
+  cursor: pointer;
+  border-radius: 13px;
+}
 
+.trending-tab > h6 {
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: capitalize;
+}
+
+.trending-tab-active {
+  border-radius: 12px;
+  background: #2f80ed;
+}
 
 .trending-divider {
   background: #828fbb;
@@ -31,7 +49,7 @@ input:focus{
   width: 100%;
 }
 
-.hidescroll{
+.hidescroll {
   overflow: hidden;
   pointer-events: none;
 }
@@ -43,42 +61,41 @@ input:focus{
   font-weight: 700;
 }
 
-
 .button__bar {
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-    vertical-align: middle;
-    margin: auto;
-    padding: 0;
-    border-radius: 40px;
-    width: 70px;
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .button__bar li {
-    list-style: none;
-    cursor: pointer;
-    display: inline-block;
-    margin: 0 3px;
-    padding: 0;
-  }
-  
-  .button__bar li button {
-    border: none;
-    border-radius: 8px;
-    background: rgba(47, 128, 237, 0.25);
-    color: transparent;
-    cursor: pointer;
-    display: block;
-    height: 4px;
-    width: 64px;
-  }
-  
-  .button__bar li.slick-active button {
-    height: 4px;
-    width: 64px;
-    opacity: 1;
-    background: #2F80ED;
-  }
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  margin: auto;
+  padding: 0;
+  border-radius: 40px;
+  width: 70px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.button__bar li {
+  list-style: none;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 3px;
+  padding: 0;
+}
+
+.button__bar li button {
+  border: none;
+  border-radius: 8px;
+  background: rgba(47, 128, 237, 0.25);
+  color: transparent;
+  cursor: pointer;
+  display: block;
+  height: 4px;
+  width: 64px;
+}
+
+.button__bar li.slick-active button {
+  height: 4px;
+  width: 64px;
+  opacity: 1;
+  background: #2f80ed;
+}
