--- a/src/screens/Home/_home.scss
+++ b/src/screens/Home/_home.scss
@@ -1,3 +1,27 @@
 .home-wrapper{
     background: #141843;
 }
+
+
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: rgba(130, 143, 187, 0.1); 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #8E97CD; 
+    border-radius: 8px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+  
