--- a/src/components/Collections/CollectionCategories/_collectioncategories.scss
+++ b/src/components/Collections/CollectionCategories/_collectioncategories.scss
@@ -8,7 +8,13 @@
     @media screen and (max-width: 1100px) {
     grid-template-columns: repeat(2,1fr);
     }
-    @media screen and (max-width: 1400px) {
-    grid-template-columns: repeat(3,1fr);
+    @media screen and (max-width: 990px) {
+    grid-template-columns: repeat(1,1fr);
+    }
+}
+
+.categories-tabs{
+    @media screen and (max-width: 990px) {
+        overflow-x: scroll;
     }
 }
