--- a/src/components/CollectionPage/CollectionBanner/_collectionbanner.scss
+++ b/src/components/CollectionPage/CollectionBanner/_collectionbanner.scss
@@ -15,13 +15,13 @@
       .collection-banner-main-info {
         .collection-logo {
           position: absolute;
-          left: -12%;
+          left: -60px;
           width: 50px;
           height: 50px;
           @media screen and (max-width: 991px) {
             width: 25px;
             height: 25px;
-            left: -8%;
+            left: -40px;
             
         }
         }
