--- a/src/screens/Profile/_profile.scss
+++ b/src/screens/Profile/_profile.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-
+  cursor: pointer;
 
   h6 {
     color: #828fbb;
@@ -22,4 +22,11 @@
     h6{
         color: #fff !important;
     }
+}
+
+.profile-divider{
+  width: 100%;
+  height: 3px;
+  border-radius: 4px;
+background: #828FBB;
 }
