--- a/src/components/CollectionPage/CollectionBanner/_collectionbanner.scss
+++ b/src/components/CollectionPage/CollectionBanner/_collectionbanner.scss
@@ -19,9 +19,10 @@
           width: 50px;
           height: 50px;
           @media screen and (max-width: 991px) {
-            width: 25px;
-            height: 25px;
-            left: -40px;
+            position: static;
+            // width: 25px;
+            // height: 25px;
+            // left: -40px;
             
         }
         }
@@ -33,6 +34,10 @@
           font-weight: 700;
           letter-spacing: 0.6px;
           text-transform: capitalize;
+          @media screen and (max-width: 786px) {
+           font-size: 14px;
+            
+        }
         }
 
         .collection-info-span {
@@ -58,6 +63,10 @@
           height: 14px;
           background: #2f80ed;
         }
+      }
+
+      @media screen and (max-width: 786px) {
+        position: relative;
       }
     }
   }
