--- a/src/components/SettingsPage/_settingspage.scss
+++ b/src/components/SettingsPage/_settingspage.scss
@@ -67,6 +67,10 @@
   height: 120px;
   width: 120px;
   border-radius: 50%;
+  @media screen and (max-width: 786px) {
+    width: 100px;
+    height: 100px;
+  }
 }
 
 .profile-banner-placeholder {
@@ -75,6 +79,9 @@
   width: 100%;
   border-radius: 10px;
   background: #23244e;
+  @media screen and (max-width: 786px) {
+    height: 100px;
+  }
 }
 
 .social-connections-span {
@@ -124,4 +131,59 @@
     font-weight: 500;
     line-height: normal;
   }
+}
+
+
+.popup-wrapper {
+  position: fixed;
+  width: fit-content;
+  height: fit-content;
+  top: -10000px;
+  left: 0%;
+  bottom: 0%;
+  right: 0%;
+  margin: auto;
+  z-index: 1000;
+  background: #1A1C39;
+  border-radius: 16px;
+  pointer-events: auto !important;
+  transition: all 1s ease-in-out;
+  width: 50%;
+
+  @media screen and (max-width: 1455px) {
+    width: 55%;
+  }
+  @media screen and (max-width: 1300px) {
+    width: 70% !important;
+  }
+  @media screen and (max-width: 786px) {
+    width: 90% !important;
+  }
+}
+
+.popup-active {
+  box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.5);
+  top: 0% !important;
+}
+
+
+.popup-title{
+  color: #FFF;
+  text-align: center;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px; /* 100% */
+  letter-spacing: -0.504px;
+}
+
+.popup-paragraph{
+  color: #828FBB;
+text-align: center;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 18px; /* 112.5% */
+letter-spacing: -0.288px;
+
 }
