--- a/src/components/CollectionCard/_collectioncard.scss
+++ b/src/components/CollectionCard/_collectioncard.scss
@@ -21,6 +21,7 @@
       line-height: normal;
       letter-spacing: 1.25px;
       text-transform: capitalize;
+      white-space: nowrap;
 
       @media screen and (max-width: 1200px) {
         font-size: 12px;
