--- a/src/components/SettingsPage/_settingspage.scss
+++ b/src/components/SettingsPage/_settingspage.scss
@@ -67,10 +67,17 @@
   height: 120px;
   width: 120px;
   border-radius: 50%;
+  position: relative;
+  transition: all .3s;
+  cursor: pointer;
   @media screen and (max-width: 786px) {
     width: 100px;
     height: 100px;
   }
+}
+
+.profile-image-placeholder:hover{
+box-shadow: inset 0px 0px 1000px rgba(0,0,0,0.3);
 }
 
 .profile-banner-placeholder {
@@ -78,6 +85,7 @@
   height: 120px;
   width: 100%;
   border-radius: 10px;
+  position: relative;
   background: #23244e;
   @media screen and (max-width: 786px) {
     height: 100px;
@@ -185,5 +193,50 @@ font-style: normal;
 font-weight: 400;
 line-height: 18px; /* 112.5% */
 letter-spacing: -0.288px;
+}
+
+.edit-collection-btn{
+  background: linear-gradient(90deg, #00A0AC 0%, #00A0AC 100%);
+  border-radius: 30px;
+  color: #FFF;
+font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+text-transform: capitalize;
+border: none;
+outline: none;
+}
+
+
+.no-collections-wrap{
+  background-color: #20234E;
+border: 1px solid #828FBB;
+border-radius: 12px;
+  .no-collections-text{
+    color: #FFF;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+}
+
+.featured-banner-placeholder{
+height: 120px;
+aspect-ratio: 2/1;
+background: #23244e;
+  border-radius: 10px;
+  position: relative;
+
+
+}
+
+.collection-banner-placeholder{
+  background: #23244e;
+  height: 120px;
+  width: 120px;
+  border-radius: 10px;
+  position: relative;
 
 }
