--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ input:focus {
     rgba(255, 255, 255, 0.05) 100%
   );
   backdrop-filter: blur(10px);
+  border: 1px solid transparent;
 
   .card-img {
     border-radius: 30px;
@@ -178,4 +179,9 @@ input:focus {
   .main-hero-title {
     font-size: 30px;
   }
+}
+
+
+.recently-listed-card:hover {
+  border: 1px solid #2f80ed;
 }
