--- a/src/components/CollectionCard/_collectioncard.scss
+++ b/src/components/CollectionCard/_collectioncard.scss
@@ -1,6 +1,7 @@
 .collection-card {
   border-radius: 30px;
   backdrop-filter: blur(10px);
+  border: 1px solid transparent;
 
   img {
   }
@@ -11,7 +12,7 @@
       rgba(255, 255, 255, 0.1) 0%,
       rgba(255, 255, 255, 0.05) 100%
     );
-    border-radius: 0 0 30px 30px;
+    border-radius: 0 0 20px 20px;
 
     .collection-card-title {
       color: #fff;
@@ -24,8 +25,7 @@
 
       @media screen and (max-width: 1200px) {
         font-size: 12px;
-            
-        }
+      }
     }
 
     .collection-price-holder {
@@ -46,14 +46,19 @@
       backdrop-filter: blur(10px);
 
       .collection-price {
-        color: #FFF;
-font-size: 10px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-letter-spacing: 1px;
-text-transform: capitalize;
+        color: #fff;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: 1px;
+        text-transform: capitalize;
       }
     }
   }
+}
+
+.collection-card:hover {
+  border: 1px solid #2f80ed;
+
 }
