--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -38,6 +38,7 @@
     line-height: normal;
     text-transform: capitalize;
     text-decoration: none;
+    background: transparent;
   }
 
   .copyright-text {
