--- a/src/components/Profile/_profilenftlist.scss
+++ b/src/components/Profile/_profilenftlist.scss
@@ -269,7 +269,8 @@
 }
 
 .collection-card {
-  border-radius: 20px;
+  border-radius: 27px 27px 20px 20px;
+  white-space: nowrap;
   background: linear-gradient(
     148deg,
     rgba(255, 255, 255, 0.1) 0%,
