--- a/src/components/Profile/ProfileBanner/_profilebanner.scss
+++ b/src/components/Profile/ProfileBanner/_profilebanner.scss
@@ -4,3 +4,8 @@
     border-radius: 30px 30px 0px 0px;
     background: linear-gradient(360deg, rgba(22, 28, 73, 0.00) 0%, #161C49 92.79%);
 }
+
+.user-banner-img {
+    height: 230px;
+    border-radius: 30px 30px 0px 0px;
+}
