--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -19,6 +19,15 @@
     text-decoration: none;
   }
 
+  .header-link-active {
+    color: #2F80ED;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
   .blue-btn {
     border-radius: 10px;
     background: #2f80ed;
