working on displaying data to profile

--- a/src/components/SettingsPage/_settingspage.scss
+++ b/src/components/SettingsPage/_settingspage.scss
@@ -343,3 +343,12 @@
     opacity: 1;
   }
 }
+
+
+.tooltip-text{
+  color: #FFF;
+font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
