--- a/src/components/Home/RecentlyListed/_recentlylisted.scss
+++ b/src/components/Home/RecentlyListed/_recentlylisted.scss
@@ -4,16 +4,47 @@
   gap: 25px;
 
   @media screen and (max-width: 1200px) {
-  grid-template-columns: repeat(3, 1fr);
-    
+    grid-template-columns: repeat(3, 1fr);
   }
   @media screen and (max-width: 1000px) {
-  grid-template-columns: repeat(2, 1fr);
-    
+    grid-template-columns: repeat(2, 1fr);
   }
   @media screen and (max-width: 786px) {
-  grid-template-columns: repeat(1, 1fr);
-    
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
+.favorite-container {
+  border-radius: 0px 11px;
+  background: linear-gradient(
+    148deg,
+    rgba(255, 255, 255, 0.1) 0%,
+    rgba(255, 255, 255, 0.05) 100%
+  );
+  backdrop-filter: blur(10px);
+  top: 0;
+  right: 0;
+  padding: 10px;
+  z-index: 5;
+}
+
+.fav-count {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.8px;
+}
+
+.fav-count-active {
+  color: #FFF;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.8px;
+-webkit-text-stroke-color: #D91D1E;
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke: 1px #D91D1E;
+}
