--- a/src/components/Profile/ProfileBanner/_profilebanner.scss
+++ b/src/components/Profile/ProfileBanner/_profilebanner.scss
@@ -3,9 +3,18 @@
     height: 180px;
     border-radius: 30px 30px 0px 0px;
     background: linear-gradient(360deg, rgba(22, 28, 73, 0.00) 0%, #161C49 92.79%);
+    transition: all .3s;
 }
 
 .user-banner-img {
-    height: 230px;
+    height: 180px;
     border-radius: 30px 30px 0px 0px;
+}
+
+.collection-banner-empty:hover{
+  box-shadow: inset 0px 0px 1000px rgba(0, 0, 0, 0.3);
+
+    .edit-image{
+        opacity: 1;
+    }
 }
