--- a/src/components/CollectionPage/CollectionBanner/_collectionbanner.scss
+++ b/src/components/CollectionPage/CollectionBanner/_collectionbanner.scss
@@ -14,7 +14,7 @@
       );
       .collection-banner-main-info {
         .collection-logo {
-          position: absolute;
+          position: relative;
           width: 50px;
           height: 50px;
           border-radius: 50%;
