--- a/src/components/SettingsPage/_settingspage.scss
+++ b/src/components/SettingsPage/_settingspage.scss
@@ -173,6 +173,7 @@
 .banner-image{
   // height: 120px;
   width: 100%;
+  height: 100%;
   aspect-ratio: 4/1;
   border-radius: 10px;
   transition: all 0.3s;
