ui fixes and updated mainhero

--- a/src/components/SettingsPage/_settingspage.scss
+++ b/src/components/SettingsPage/_settingspage.scss
@@ -401,3 +401,8 @@
   font-weight: 400;
   line-height: normal;
 }
+
+
+.disabled-save-btn {
+  background: linear-gradient(90deg, #2c2e31 0%, #68757b 100%);
+}
