--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,8 @@ input:focus {
 
 @media only screen and (max-width: 991px) {
   .main-hero-title {
-    font-size: 30px;
+    font-size: 27px;
+    line-height: 30px;
   }
 }
 
