--- a/src/components/Home/MainHero/_mainhero.scss
+++ b/src/components/Home/MainHero/_mainhero.scss
@@ -1,12 +1,22 @@
 .main-hero-wrapper {
   border-radius: 30px;
-  background:  url('./assets/main-heroBg.webp');
+  background: url("./assets/main-heroBg.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   // backdrop-filter: blur(10px);
   @media only screen and (max-width: 991px) {
     margin-top: 3rem;
+
+  }
+
+  @media only screen and (max-width: 420px) {
+    margin-top: 3rem;
+  background: url("./assets/main-heroBg-mobile.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
   }
 
   .main-hero-desc {
@@ -20,6 +30,7 @@
 
     @media screen and (max-width: 786px) {
       width: 100%;
+    font-size: 14px;
     }
   }
 
@@ -41,7 +52,7 @@
 
   .explore-btn {
     border-radius: 20px;
-    background: linear-gradient(90deg, #2F80ED 0%, #1DC8F3 100%);
+    background: linear-gradient(90deg, #2f80ed 0%, #1dc8f3 100%);
     color: #fff;
     text-align: center;
     font-size: 20px;
@@ -53,10 +64,12 @@
     outline: none;
     border: none;
     text-decoration: none;
+
+    @media screen and (max-width: 786px) {
+    font-size: 16px;
+    }
   }
 }
-
-
 
 .package-blur {
   transition: all 0.25s;
@@ -107,7 +120,6 @@
   width: 296px !important;
   height: 372px !important;
 
-
   @media only screen and (max-width: 991px) {
     transform: none !important;
   }
@@ -116,7 +128,6 @@
 .second-bigbox-blur {
   width: 281.94px !important;
   height: 295px !important;
- 
 
   @media only screen and (max-width: 991px) {
     transform: none !important;
@@ -126,8 +137,6 @@
 .first-box-blur {
   width: 125.66px;
   height: 166.08px;
-
-  
 
   background: linear-gradient(
     155.14deg,
@@ -147,7 +156,6 @@
   border: 2px solid #41435a;
   transition: all 0.25s;
 }
-
 
 .second-box-blur {
   width: 125.66px;
@@ -174,4 +182,28 @@
   @media only screen and (max-width: 991px) {
     top: auto;
   }
+}
+
+.single-small-collection-wrapper {
+  border-radius: 16px;
+  border-top: 2.5px solid rgba(255, 255, 255, 0.4);
+  border-bottom: 2.5px solid rgba(255, 255, 255, 0.4);
+  background: linear-gradient(
+    161deg,
+    rgba(255, 255, 255, 0.1) 0%,
+    rgba(255, 255, 255, 0.05) 101.7%
+  );
+  backdrop-filter: blur(17.5px);
+  padding: 5px;
+  transition: all 0.25s;
+  cursor: pointer;
+}
+
+.small-collection-img {
+  width: 88px;
+  height: 88px;
+}
+
+.single-small-collection-wrapper:hover {
+  scale: 1.1;
 }
