--- a/src/components/Collections/CollectionCategories/_collectioncategories.scss
+++ b/src/components/Collections/CollectionCategories/_collectioncategories.scss
@@ -1,6 +1,6 @@
 .collection-categories-grid{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4,minmax(0, 1fr));
     gap: 20px;
     @media screen and (max-width: 1400px) {
     grid-template-columns: repeat(3,1fr);
