updated states for single nft

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,32 @@ input:focus {
 }
 
 
+.uni-input {
+  /* width: 80%; */
+  background: #141843;
+  border: 1px solid #828fbb;
+  height: 34px;
+  padding: 0 5px;
+  border-radius: 12px;
+  color: #fff;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
 
+.uni-input::placeholder {
+  color: #828fbb;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.uni-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 
 .buy-btn {
