--- a/src/components/MakeOffer/makeoffer.scss
+++ b/src/components/MakeOffer/makeoffer.scss
@@ -23,10 +23,10 @@
   // height: 80px;
   border-radius: 12px;
 
-  @media only screen and (max-width: 500px) {
-    width: 100%;
-    height: 150px;
-  }
+  // @media only screen and (max-width: 500px) {
+  //   width: 100%;
+  //   height: 150px;
+  // }
 }
 
 .itemname {
