added fields for support settings

--- a/src/components/SettingsPage/_settingspage.scss
+++ b/src/components/SettingsPage/_settingspage.scss
@@ -413,3 +413,11 @@
   position: absolute;
   bottom: -20px;
 }
+
+.image-name{
+  color: #828fbb;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
