--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,11 @@ input:focus {
   line-height: normal;
   text-transform: capitalize;
 }
+@media screen and (max-width: 786px) {
+  .trending-tab > h6{
+    font-size: 12px !important;
+  }
+}
 
 .trending-tab-active {
   border-radius: 12px;
