--- a/src/components/Collections/TopCollections/_topcollections.scss
+++ b/src/components/Collections/TopCollections/_topcollections.scss
@@ -7,7 +7,8 @@
 .top-collection-image {
   border-radius: 30px;
   width: 100%;
-  height: 100%;
+  height: 400px;
+  object-fit: cover;
 }
 
 .top-collection-wrapper {
