--- a/src/components/Header/MobileHeader/_mobileheader.scss
+++ b/src/components/Header/MobileHeader/_mobileheader.scss
@@ -38,16 +38,16 @@
     margin-top: 8px;
   }
   
-  #menu-toggle:checked + .menu-button-container .menu-button::before {
+  .menu-toggle-open + .menu-button-container .menu-button::before {
     margin-top: 0px;
     transform: rotate(405deg);
   }
   
-  #menu-toggle:checked + .menu-button-container .menu-button {
+  .menu-toggle-open + .menu-button-container .menu-button {
     background: rgba(255, 255, 255, 0);
   }
   
-  #menu-toggle:checked + .menu-button-container .menu-button::after {
+  .menu-toggle-open + .menu-button-container .menu-button::after {
     margin-top: 0px;
     transform: rotate(-405deg);
   }
