--- a/src/components/SettingsPage/_settingspage.scss
+++ b/src/components/SettingsPage/_settingspage.scss
@@ -8,6 +8,8 @@
   height: 100%;
   background: #23244e;
   .sidebar-item {
+    text-decoration: none !important;
+
     border-radius: 10px;
     cursor: pointer;
     h6 {
