--- a/src/screens/Profile/_profile.scss
+++ b/src/screens/Profile/_profile.scss
@@ -26,7 +26,7 @@
 
 
 .active {
-    background: rgba(35, 36, 78, 0.5);
+    // background: rgba(35, 36, 78, 0.5);
     h6{
         color: #fff !important;
     }
