--- a/src/components/CollectionPage/CollectionList/_collectionlist.scss
+++ b/src/components/CollectionPage/CollectionList/_collectionlist.scss
@@ -182,6 +182,7 @@
 .categories-dropdown-menu {
   background: #141843;
   border: 1px solid #828fbb;
+  cursor: pointer;
 }
 
 .categories-dropdown-item {
