--- a/src/components/SettingsPage/_settingspage.scss
+++ b/src/components/SettingsPage/_settingspage.scss
@@ -96,7 +96,7 @@
   transition: all 0.3s;
   border-radius: 10px;
   @media screen and (max-width: 786px) {
-    width: 100px;
+    // width: 100px;
     height: 100px;
   }
 }
