--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -151,6 +151,20 @@
   color: #11fed2;
 }
 
+.swappi-btn {
+  border-radius: 10px;
+  outline: none !important;
+  border: none !important;
+  background: linear-gradient(240deg, #8967c8 0%, #2f80ed 100%);
+  height: 40px;
+  color: #fff;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: none !important;
+}
+
 .search-result-wrapper {
   border-radius: 10px;
   border: 1px solid #b8b8e0;
